fix overlay on mobile

--- a/src/map/_map.scss
+++ b/src/map/_map.scss
@@ -155,6 +155,10 @@
   &[data-visible="true"] {
     opacity: 1;
   }
+
+  &[data-dismissible="true"] {
+    pointer-events: all;
+  }
 }
 
 #map-zoom {
